# jsonrpc-actix

./: Cargo.toml
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: handle.rs  lib.rs  main.rs  methods.rs
src/types/: id.rs  mod.rs  params.rs  request.rs  response.rs
src/types/error/: code.rs  mod.rs  object.rs
